# MonteCarloPathTracer

./: .gitignore  CMakeLists.txt  README.md  tmp
models/Scene01/: parameter.txt
models/Scene02/: parameter.txt
models/Scene03/: parameter.txt
models/Scene04/: parameter.txt
src/: AABB.h  CMakeLists.txt  Kdtree.h  Model.h  Point.h  Ray.h  Scene.h  Time.h  Util.h  main.cpp
